--- a/index.html
+++ b/index.html
@@ -387,28 +387,6 @@
 <script src="http://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script>
-    //Get the currtent year for the copyright
-    $('#year').text(new Date().getFullYear());
-
-
-    //init ScrollSpy
-    $('body').scrollspy({target:'#main-nav'});
-
-    //Smooth Scrolling
-    $('main-nav a').on('click', function(event){
-        event.preventDefault();
-        
-        const hash = this.hash;
-
-        $('html, body').animate({
-           scrollTop: $(hash).offset().top
-        },800, function(){
-            window.location.hash= hash; 
-        });
-        }
-    });
-</script>
-
+<script type="text/javascript" src="js/mizux.js"></script>
 </body>
 </html>
